# libuefi

./: .gitignore  README.md
.github/workflows/: build.yml
include/: uefi.h
test/: CMakeLists.txt
test/src/: test_helper.h
test/src/data_types/: efi_main.c
test/src/simple_text_output_protocol/: efi_main.c
test/src/unit/miscellaneous_runtime_services/: efi_main.c
test/src/unit/simple_text_output_protocol/: efi_main.c
